--- a/nuevapagina.html
+++ b/nuevapagina.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,34 +9,73 @@
     <!-- Cargar Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="nuevapagina.css">
+     <!-- Tipografia -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
 </head>
 <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg my-navbarcolor" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn my-color-btn" type="submit">Search</button>
-                </form>
-            </div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HELLO BOOTSTRAP</title>
+        <!-- Cargar Bootstrap 5 -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="nuevapagina.css">
+        <!-- Tipografía -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css" rel="stylesheet">
+        <!-- Cargar Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
+    <body>
+       <!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg my-navbarcolor" data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="img/logos deia color-05 2.png" alt="Logo" style="height: 40px;"> <!-- Ajusta la ruta y la altura según sea necesario -->
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn my-color-btn" type="submit">Search</button>
+            </form>
+            <!-- Íconos de carrito y perfil -->
+            <a href="#" class="nav-link">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+            <a href="#" class="nav-link">
+                <i class="fas fa-user"></i>
+            </a>
         </div>
-    </nav>
+    </div>
+</nav>
+
 
     <!-- GALERÍA CON CARRUSEL -->
-    <div class="container text-center my-4">
+    <div class="container text-center my-4 ">
+        <!-- Título principal con animación -->
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <h1 class="mb-4 mt-4 fs-1">CREA TU BIKINI</h1>
+        </div>
+        <!-- Subtítulo con animación -->
+        <div data-aos="zoom-out-left">
+         <h3 class="fw-light text-muted mt-4 mb-5 fs-7">Haz clic en una imagen o en las flechas para pausar el carrusel
+                y elige tu combinación ideal.</h3>
+            </div>
+
         <!-- Carrusel -->
         <div id="carouselExampleRight" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-inner">
@@ -247,6 +288,71 @@
             </button>
         </div>
     </div>
+
+    <footer id="site-footer" role="contentinfo" class="bg-light mt-6">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 d-flex flex-wrap">
+              <div class="col-md-3">
+                <p class="title mt-4">Quiénes somos</p>
+                <p><a itemprop="url" title="Manifiesto" href="/es/manifesto/" class="footer-link">Manifiesto</a></p>
+                <p><a itemprop="url" title="Condiciones de uso" href="/es/terms-and-conditions/" class="footer-link">Términos y condiciones</a></p>
+                <p><a itemprop="url" title="Política de privacidad" href="/es/legal/" class="footer-link">Política de privacidad</a></p>
+              </div>
+              <div class="col-md-3">
+                <p class="title mt-4">Cómo comprar</p>
+                <p><a itemprop="url" title="Preguntas frecuentes" href="/es/faqs/" class="footer-link">Preguntas frecuentes</a></p>
+                <p><a itemprop="url" title="Envíos y devoluciones" href="/es/shipping-and-returns/" class="footer-link">Envíos y devoluciones</a></p>
+                <p><a rel="noindex, nofollow" itemprop="url" title="Tabla de tallas" href="javascript:void(0);" onclick="openSizeChart();" class="footer-link">Tabla de tallas</a></p>
+              </div>
+              <div class="col-md-3">
+                <p class="title mt-4">Contáctanos</p>
+                <p><a rel="noindex, nofollow" title="Contáctanos" href="mailto:hello@nowthenlabel.com" class="footer-link">Atención al cliente</a></p>
+                <p><a rel="noindex, nofollow" href="javascript:void(0);" onclick="document.getElementById('telon_info_wholesale').style.display='inline'" class="footer-link">Wholesale</a></p>
+                <p><a rel="noindex, nofollow" title="Prensa y RRPP" href="mailto:press@nowthenlabel.com" class="footer-link">Prensa y RRPP</a></p>
+              </div>
+              <div class="col-md-3 d-flex align-items-center">
+                <div class="newsletter w-100">
+                  <p>Suscríbete para descubrir nuevos lanzamientos y ofertas exclusivas. 10% de descuento en tu primera compra.</p>
+                  <input class="btn btn-primary" type="button" value="UNIRME" onclick="document.getElementById('telon_form_popup_newsletter').style.display='inline'">
+                </div>
+                <p class="follow-us text-end">Síguenos</p>
+                <ul class="footer_socials_wrapper list-unstyled d-flex justify-content-end">
+                  <li><a href="https://www.facebook.com/NowThenLabel" title="Follow us on Facebook" target="_blank" class="social_media"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://www.instagram.com/nowthenlabel/" title="Follow us on Instagram" target="_blank" class="social_media"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="mailto:hello@nowthenlabel.com" title="Send us an e-mail"><i class="fa fa-envelope"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="site-footer-copyright-area mt-5">
+            <div class="row">
+              <div class="col-12">
+                <div class="social_and_copyright_text">
+                  <div class="copyright_text">
+                    <a href="img/logos deia color-05 2.png" class="footer-link">DEIÁ</a> © 2024
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+    <!-- Bootstrap JS, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="script.js"></script>
+    <!-- AOS JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
+<script>
+    // Inicializar AOS
+    AOS.init({
+        duration: 1000, // Duración de la animación en milisegundos
+    });
+</script>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
